--- a/AI/DL/yolo_detection_and_pose/requirements.txt
+++ b/AI/DL/yolo_detection_and_pose/requirements.txt
@@ -1,18 +1,38 @@
+absl-py==2.3.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+asttokens==3.0.0
+attrs==25.3.0
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 contourpy==1.3.3
 cycler==0.12.1
+decorator==5.2.1
+executing==2.2.1
 filelock==3.19.1
+flatbuffers==25.2.10
 fonttools==4.59.2
+frozenlist==1.7.0
 fsspec==2025.9.0
 idna==3.10
+ipython==9.5.0
+ipython_pygments_lexers==1.1.1
+jax==0.7.1
+jaxlib==0.7.1
+jedi==0.19.2
 Jinja2==3.1.6
 kiwisolver==1.4.9
 MarkupSafe==3.0.2
 matplotlib==3.10.6
+matplotlib-inline==0.1.7
+mediapipe==0.10.21
+ml_dtypes==0.5.3
 mpmath==1.3.0
+multidict==6.6.4
 networkx==3.5
-numpy==2.2.6
+numpy==1.26.4
 nvidia-cublas-cu12==12.8.4.1
 nvidia-cuda-cupti-cu12==12.8.90
 nvidia-cuda-nvrtc-cu12==12.8.93
@@ -27,23 +47,41 @@ nvidia-cusparselt-cu12==0.7.1
 nvidia-nccl-cu12==2.27.3
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvtx-cu12==12.8.90
+opencv-contrib-python==4.11.0.86
 opencv-python==4.12.0.88
+opt_einsum==3.4.0
 packaging==25.0
+parso==0.8.5
+pexpect==4.9.0
 pillow==11.3.0
 polars==1.33.0
+prompt_toolkit==3.0.52
+propcache==0.3.2
+protobuf==4.25.8
 psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycparser==2.22
+Pygments==2.19.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pytubefix==9.5.0
 PyYAML==6.0.2
 requests==2.32.5
 scipy==1.16.1
+sentencepiece==0.2.1
 setuptools==80.9.0
 six==1.17.0
+sounddevice==0.5.2
+stack-data==0.6.3
 sympy==1.14.0
 torch==2.8.0
 torchvision==0.23.0
+traitlets==5.14.3
 triton==3.4.0
 typing_extensions==4.15.0
 ultralytics==8.3.196
 ultralytics-thop==2.0.17
 urllib3==2.5.0
+wcwidth==0.2.13
+yarl==1.20.1
