--- a/AI/DL/yolo_detection_and_pose/requirements.txt
+++ b/AI/DL/yolo_detection_and_pose/requirements.txt
@@ -7,8 +7,10 @@ attrs==25.3.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
+comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
+debugpy==1.8.16
 decorator==5.2.1
 executing==2.2.1
 filelock==3.19.1
@@ -16,21 +18,30 @@ flatbuffers==25.2.10
 fonttools==4.59.2
 frozenlist==1.7.0
 fsspec==2025.9.0
+h5py==3.14.0
 idna==3.10
+ipykernel==6.30.1
 ipython==9.5.0
 ipython_pygments_lexers==1.1.1
 jax==0.7.1
 jaxlib==0.7.1
 jedi==0.19.2
 Jinja2==3.1.6
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+keras==3.11.3
 kiwisolver==1.4.9
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.6
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mediapipe==0.10.21
 ml_dtypes==0.5.3
 mpmath==1.3.0
 multidict==6.6.4
+namex==0.1.0
+nest-asyncio==1.6.0
 networkx==3.5
 numpy==1.26.4
 nvidia-cublas-cu12==12.8.4.1
@@ -50,10 +61,13 @@ nvidia-nvtx-cu12==12.8.90
 opencv-contrib-python==4.11.0.86
 opencv-python==4.12.0.88
 opt_einsum==3.4.0
+optree==0.17.0
 packaging==25.0
+pandas==2.3.2
 parso==0.8.5
 pexpect==4.9.0
 pillow==11.3.0
+platformdirs==4.4.0
 polars==1.33.0
 prompt_toolkit==3.0.52
 propcache==0.3.2
@@ -66,8 +80,11 @@ Pygments==2.19.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytubefix==9.5.0
+pytz==2025.2
 PyYAML==6.0.2
+pyzmq==27.1.0
 requests==2.32.5
+rich==14.1.0
 scipy==1.16.1
 sentencepiece==0.2.1
 setuptools==80.9.0
@@ -77,9 +94,11 @@ stack-data==0.6.3
 sympy==1.14.0
 torch==2.8.0
 torchvision==0.23.0
+tornado==6.5.2
 traitlets==5.14.3
 triton==3.4.0
 typing_extensions==4.15.0
+tzdata==2025.2
 ultralytics==8.3.196
 ultralytics-thop==2.0.17
 urllib3==2.5.0
