--- a/server/app_server/nginx/nginx.conf
+++ b/server/app_server/nginx/nginx.conf
@@ -1,7 +1,7 @@
 # Nginx 설정 파일 - FastAPI 프록시 서버
 
-user www-data;
-worker_processes auto;
+user  nginx;            # 👈 Alpine 기본 계정
+worker_processes  auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
@@ -14,6 +14,15 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+    
+    # (추가) Docker 내장 DNS - proxy_pass에 'resolve' 쓸 때 필요
+    resolver 127.0.0.11 ipv6=off;
+
+    # (추천) WebSocket 연결 헤더 자동 전환
+    map $http_upgrade $connection_upgrade {
+        default close;
+        upgrade upgrade;
+    }
 
     # 로그 형식 정의
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
@@ -47,9 +56,10 @@ http {
         application/atom+xml
         image/svg+xml;
 
-    # 업스트림 서버 정의
+    # ✅ 업스트림을 Docker 서비스명으로
     upstream fastapi_backend {
-        server 127.0.0.1:8000;
+        zone fastapi_backend_zone 64k;  # ← 공유 메모리 할당
+        server api:8000 resolve;
         keepalive 32;
     }
 
@@ -63,7 +73,15 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';" always;
+        # Swagger 자원 로딩 이슈 줄이려면 아래처럼 완화 추천(선택)
+        # add_header Content-Security-Policy "default-src 'self'; img-src 'self' data: blob:; font-src 'self' data:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';" always;
+
+        # ✅ nginx 자체 헬스엔드포인트(백엔드와 분리)
+        location /healthz {
+            access_log off;
+            return 200 "ok\n";
+            add_header Content-Type text/plain;
+        }
 
         # API 프록시 설정
         location /api/ {
@@ -147,8 +165,9 @@ http {
 
     # 로드 밸런싱 설정 (향후 확장용)
     upstream fastapi_cluster {
+        zone fastapi_cluster_zone 64k;  # ← 마찬가지
         least_conn;
-        server 127.0.0.1:8000 weight=1 max_fails=3 fail_timeout=30s;
+        server api:8000 weight=1 max_fails=3 fail_timeout=30s;
         # server 127.0.0.1:8001 weight=1 max_fails=3 fail_timeout=30s;
         # server 127.0.0.1:8002 weight=1 max_fails=3 fail_timeout=30s;
     }
