--- a/server/app_server/docker/compose.local.yml
+++ b/server/app_server/docker/compose.local.yml
@@ -25,5 +25,8 @@ services:
 
   nginx:
     ports:
-      - "8080:80"
+      - "80:80"
       - "3000:3000"  # Grafana (개발용)
+    volumes:
+      - ../nginx/nginx.conf:/etc/nginx/nginx.conf:ro   # ← 추가: 로컬 conf를 그대로 사용
+      - ../static:/var/www/static:ro                   # (이미 있던 정적 파일 마운트)
